column width changed

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -17,7 +17,7 @@
   <!--      {{ valrun.reference_configuration.variable.pretty_name }}-->
       </div>
 
-      <div class="p-col" style="max-width: 7rem;">
+      <div class="p-col-2" style="max-width: 7rem;">
         <strong>Created:</strong><br/>
         {{ valrun.start_time|date:"YYYY-MM-dd" }}
       </div>
