fine-tuning scaling module

--- a/UI/src/app/modules/scaling/components/scaling/scaling.component.html
+++ b/UI/src/app/modules/scaling/components/scaling/scaling.component.html
@@ -22,7 +22,7 @@
         <p-dropdown id="scalingReferenceSelector" (onChange)="updateScalingModel()"
                     [options]="scaleToModels"
                     [(ngModel)]="selectedScalingModel.scaleTo"
-                    [disabled]="selectedScalingModel.scaleToSelectorDisabled"
+                    [disabled]="isScalingSelectorDisabled()"
                     optionLabel="description" [style]="{'min-width':'250px'}"></p-dropdown>
         <label for="scalingReferenceSelector">Scale To</label>
       </div>
