fixing wrong header

--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -1,4 +1,4 @@
-<p-panel header="Spatial Subsetting" [toggleable]="true">
+<p-panel header="Validation Period" [toggleable]="true">
   <ng-template pTemplate="icons">
     <label class="p-panel-header-icon"
            pTooltip="Restricts the input and reference data to the time period given. Days 'from' and 'to' are fully included in the interval."
