--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -9,13 +9,16 @@
       <div class="p-col-4">
         <strong>Data:</strong><br/>
         <span *ngFor="let config of validationDatasetsConfigurations.datasetConfig; let ind = index">
-          {{config.datasetModel.selectedDataset?.pretty_name}} {{validationDatasetsConfigurations.isReference[ind]}}<br>
+          <span *ngIf="!validationDatasetsConfigurations.isReference[ind]"> {{config.datasetModel.selectedDataset?.pretty_name}} </span> <br>
         </span>
 <!--        <span>{{ addDatasetToList() }} </span>-->
       </div>
 
       <div class="p-col-4">
         <strong>Reference:</strong><br/>
+        <span *ngFor="let config of validationDatasetsConfigurations.datasetConfig; let ind = index">
+          <span *ngIf="validationDatasetsConfigurations.isReference[ind]"> {{config.datasetModel.selectedDataset?.pretty_name}} </span>
+        </span>
 
   <!--      {{ valrun.reference_configuration.dataset.pretty_name }},-->
   <!--      {{ valrun.reference_configuration.version.pretty_name }},-->
