--- a/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
+++ b/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
@@ -1,5 +1,6 @@
 <div class="p-grid no-gutters">
   <div class="p-col-12">
-    <p-checkbox [label]="filterModel.filterDto.description" [value]="filterModel.enabled"></p-checkbox>
+    <p-checkbox [label]="filterModel.filterDto.description" [(ngModel)]="filterModel.enabled"
+                [binary]="true"></p-checkbox>
   </div>
 </div>
