preriliminary code added to validations component so that there is no empty page

--- a/UI/src/app/pages/validations/validations.component.html
+++ b/UI/src/app/pages/validations/validations.component.html
@@ -1,1 +1,18 @@
-<p>validations works!</p>
+<div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
+  <h1 class="jumbotron-heading">My validations</h1>
+
+  <p *ngIf="!(myValidation$|async)" class="lead text-muted">
+    You have not started any validations yet. Visit the <a href="{% url 'validation' %}">validation page</a>
+    to start your own validation run.
+  </p>
+
+</div>
+<div class="container" >
+  <!--  <div *ngFor="let dataset of datasets">{{dataset.pretty_name}}</div>-->
+  <div *ngFor="let valrun of myValidation$|async">
+    <qa-validationrun-row [published]="false" [valrun]="valrun" [allDatasets]="datasets" [allVersions]="versions"
+                          [allVariables]="variables">
+
+    </qa-validationrun-row>
+  </div>
+</div>
