--- a/UI/src/app/pages/validations/validations.component.html
+++ b/UI/src/app/pages/validations/validations.component.html
@@ -10,9 +10,6 @@
 <div class="container" >
   <!--  <div *ngFor="let dataset of datasets">{{dataset.pretty_name}}</div>-->
   <div *ngFor="let valrun of myValidation$|async">
-    <qa-validationrun-row [published]="false" [valrun]="valrun" [allDatasets]="datasets" [allVersions]="versions"
-                          [allVariables]="variables">
-
-    </qa-validationrun-row>
+    <qa-validationrun-row [published]="false" [validationRun]="valrun"></qa-validationrun-row>
   </div>
 </div>
