--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -38,7 +38,7 @@
 <p-panel *ngIf="!published">
   <ng-template pTemplate="header">
     <h5 class="my-0" style="float: left">
-
+      <!--      if there is expiry date property: -->
       <span *ngIf="validationRun.expiry_date">
         <label *ngIf="validationRun.is_near_expiry" class="p-panel-header-icon"
                pTooltip="This validation will SOON be automatically removed during cleanup on
@@ -52,17 +52,31 @@
           <span class="pi pi-calendar expiry-icons" title=""></span>
         </label>
       </span>
-
+      <!--      if there is no expiry date property: -->
       <span *ngIf="!validationRun.expiry_date">
         <label *ngIf="validationRun.progress === -1" class="p-panel-header-icon"
                pTooltip="This validation was cancelled."
                tooltipPosition="bottom">
           <span class="pi pi-ban expiry-icons" title=""></span>
         </label>
-        <label *ngIf="!validationRun.end_time" class="p-panel-header-icon"
-               pTooltip="This validation was cancelled."
+        <label *ngIf="!validationRun.end_time && validationRun.progress === 0" class="p-panel-header-icon"
+               pTooltip="This validation is still running."
                tooltipPosition="bottom">
-          <span class="pi pi-ban expiry-icons" title=""></span>
+          <span class="pi pi-spin pi-spinner expiry-icons" title=""></span>
+        </label>
+
+        <label *ngIf="validationRun.doi" class="p-panel-header-icon"
+               pTooltip="This result has been published with zenodo. It will NOT be automatically removed during cleanup."
+               tooltipPosition="bottom">
+          <a class="doilink" target="_blank" href="{{getDoiPrefix()}}{{ validationRun.doi }}"><span
+            class="pi pi-book expiry-icons"></span></a>
+
+        </label>
+
+        <label *ngIf="validationRun.is_archived" class="p-panel-header-icon"
+               pTooltip="This validation has been archived. It will NOT be automatically removed during cleanup."
+               tooltipPosition="bottom">
+         <fa-icon class="expiry-icons" [icon]="faIcons.faArchive"></fa-icon>
         </label>
 
       </span>
