--- a/UI/src/app/pages/published-validations/published-validations.component.html
+++ b/UI/src/app/pages/published-validations/published-validations.component.html
@@ -1,22 +1,3 @@
-<div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
-  <h1 class="jumbotron-heading">Published validations</h1>
-  <p class="lead text-muted">
-    The QA4SM validations below have been published by their owners to <a target="_blank" href="https://zenodo.org/">Zenodo</a>
-    and
-    can be referenced with a <a target="_blank" href="https://www.doi.org/">DOI</a>.
-  </p>
-</div>
 <div class="container">
-  <div *ngFor="let valrun of validations  | paginate :
-  {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
-
-    <qa-validationrun-row [published]="true" [validationRun]="valrun"></qa-validationrun-row>
-    <br/>
-  </div>
-  <pagination-controls previousLabel="Prev"
-                       nextLabel="Next"
-                       [responsive]="true"
-                       (pageChange)="handlePageChange($event)"></pagination-controls>
-
+  <qa-validation-page-paginated [published]="true"></qa-validation-page-paginated>
 </div>
-
