--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -166,13 +166,13 @@
                                         {% if valrun.output_file %}
                                             <button class="dropdown-item"
                                                 onclick="location.href='{{ valrun.output_dir_url }}graphs.zip';"
-                                                title="Download all graphs">
+                                                title="Download all graphs .zip archive">
                                                 <span class="fas fa-download"></span>
                                             Download Graphs
                                             </button>
                                             <button class="dropdown-item"
                                                     onclick="location.href='{{ valrun.output_file.url }}';"
-                                                    title="Download NetCDF">
+                                                    title="Download validation results .nc file">
                                                     <span class="fas fa-file-download"></span>
                                             Download NetCDF file
                                             </button>
@@ -180,14 +180,14 @@
                                         {% if valrun.is_unpublished %}
                                             <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
                                             <button class="dropdown-item"
-                                                    title="Remove result"
+                                                    title="Remove this validation run"
                                                     onclick="ajax_delete_result('{{ valrun.id }}', false)">
                                                     <span class="fas fa-times"></span>
-                                            Remove Validation Run
+                                            Delete Validation Run
                                             </button>
                                             {% if not valrun.is_archived %}
                                                 <button class="dropdown-item"
-                                                        title="Extend lifespan"
+                                                        title="Extend lifespan of this validation run"
                                                         onclick="ajax_extend_result('{{ valrun.id }}', true)">
                                                         <span class="fas fa-calendar-plus"></span>
                                                 Extend Life Span
