--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -166,13 +166,13 @@
                                         {% if valrun.output_file %}
                                             <button class="dropdown-item"
                                                 onclick="location.href='{{ valrun.output_dir_url }}graphs.zip';"
-                                                title="Download all graphs .zip archive">
+                                                title="Download graphs .zip">
                                                 <span class="fas fa-download"></span>
                                             Download Graphs
                                             </button>
                                             <button class="dropdown-item"
                                                     onclick="location.href='{{ valrun.output_file.url }}';"
-                                                    title="Download validation results .nc file">
+                                                    title="Download validation run .nc file">
                                                     <span class="fas fa-file-download"></span>
                                             Download NetCDF file
                                             </button>
